RET-6148 (#2685)
* Checkstyle fixes in the main package

* Update MultiplesHelper.java